# heartbeat-status

./: .env.example  .gitignore  .pre-commit-config.yaml  .spaceignore  Discovery.md  Dockerfile  Spacefile  pyproject.toml  requirements.txt
.github/workflows/: manual_test.yml  release.yml  test.yml
heartbeat_status/: deta.py  graphs.py  main.py
heartbeat_status/templates/: index.j2
tests/: test_heartbeat_status.py
