[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "heartbeat-status"
version = "0.0.4"
description = "Check Fitbit heartbeat status online"
readme = "README.md"
keywords = [
  "fitbit",
]
license = { text = "MIT" }
authors = [
  { name = "eggplants", email = "w10776e8w@yahoo.co.jp" },
]
requires-python = ">=3.10,<4"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dependencies = [
  "deta>=1.2,<2",
  "fastapi>=0.115.6,<0.116",
  "jinja2>=3.1.5,<4",
  "pandas>=2.2.3,<3",
  "pandas-stubs>=2.2.3.241126,<3",
  "plotly>=5.24.1,<6",
  "pydantic>=2.10.5,<3",
  "python-dotenv>=1.0.1,<2",
  "requests>=2.32.3,<3",
  "uvicorn>=0.34,<0.35",
]

urls.Repository = "https://github.com/eggplants/heartbeat-status"
scripts.heartbeat_status = "heartbeat_status.main:main"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  { include = "heartbeat_status" },
]

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991,<1.15"
pre-commit = ">=2.20,<5.0"
pytest = ">=7.2.2,<9.0.0"
pytest-cov = ">=4,<7"
taskipy = "^1.10.3"
types-beautifulsoup4 = "^4.11.6.7"
types-pillow = ">=9.4.0.17,<11.0.0.0"
types-requests = "^2.28.11.15"

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0"

[tool.black]
line-length = 120
target-version = [
  'py310',
]

[tool.ruff]
line-length = 120
lint.select = [
  "ALL",
]
lint.ignore = [
  "D",
]
lint.per-file-ignores."main.py" = [
  "T201", # `print` found
]

lint.per-file-ignores."tests/*test_*.py" = [
  "S101", # Use of assert detected
]

[tool.mypy]
plugins = [
  "pydantic.mypy",
]
pretty = true
python_version = "3.10"
show_error_codes = true
strict = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytype]
jobs = '4'
precise_return = true
protocols = true
python_version = '3.10'
report_errors = true
strict_import = true

[tool.taskipy.tasks]
dev = "uvicorn heartbeat_status.main:app --reload"
lint = "pre-commit run -a"
profile = "python -m cProfile"
start = "uvicorn heartbeat_status.main:app"
test = "pytest --cov=heartbeat_status --cov-report=term"
"test:ci" = "task test --cov-report=xml:cov.xml"
